o Changes in version 0.2.5
  o Added arguments regularize_mat_beta and regularize_mat_kappa to only regularize certain edges.
  o Fixed a bug in simMLgvar in which the sign of the between-person network was reversed.

o Changes in version 0.2.3
  o Fixed an error due to tibble update

Changes in Version 0.2.2:
  o Fixed a CRAN warning
  o Added 'lags' and 'likelihood' argments to graphicalVAR
  o Fixed message about deprecated functions

Changes in Version 0.2.1:
  o Data is now stored in the output of graphicalVAR
  o Fixed a bug leading to NA in any column to delete a row
  o Added 'likelihood' argument to mimic sparseTSCGM 2.5 behavior

Changes in Version 0.2:
    o Added 'tsData' function to prepare data
    o graphicalVAR now supports multiple subjects (fixed effects only) and day effects
    o 'beepvar' can now be used to handle missing beeps
    o Added 'mimic' argument to 'graphicalVAR' to mimic 0.1.2 and 0.1.4 behavior.
    o Lambda sequence for kappa now uses the maximum absolute correlation as maximal value rather than 1.
    o Added 'mlGraphicalVAR' for pooled and individual estimation of N > 1 datasets
    o Added 'simMLgvar' to simulate N > 1 data
    o Fixed a bug in 'graphicalVARsim' where mean structure was not used in data generation

Changes in Version 0.1.4:
    o 'graphicalVAR' again standardizes variables before running by default. Can be controlled using the 'scale' argument
    o New arguments to 'graphicalVAR':
        o deleteMissings
        o penalize.diagonal
        o lambda_min_kappa
        o lambda_min_beta
        o scale
    o Added 'randomGVARmodel' function to simulate graphicalVAR model matrices
    o Added unregularized estimation when both lambda_kappa = 0 and lambda_beta = 0