@@ -6,6 +6,11 @@
 
 using namespace Rcpp;
 
+#ifdef RCPP_USE_GLOBAL_ROSTREAM
+Rcpp::Rostream<true>&  Rcpp::Rcout = Rcpp::Rcpp_cout_get();
+Rcpp::Rostream<false>& Rcpp::Rcerr = Rcpp::Rcpp_cerr_get();
+#endif
+
 // beta_ridge_C
 NumericMatrix beta_ridge_C(NumericMatrix X, NumericMatrix Y, double lambda_beta);
 RcppExport SEXP _graphicalVAR_beta_ridge_C(SEXP XSEXP, SEXP YSEXP, SEXP lambda_betaSEXP) {
